--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,19 @@ java {
     }
 }
 
+jar {
+    manifest {
+        attributes(
+            'Main-Class': 'nanami.Main'
+        )
+    }
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
+}
 application {
     // Define the main class for the application.
     mainClass = 'nanami.Main'
