--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,6 @@ plugins {
 }
 
 repositories {
-    // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
 
@@ -23,7 +22,12 @@ dependencies {
 
     // This dependency is used by the application.
     implementation libs.guava
+
+    // Libraries for JSON file management
     implementation 'org.json:json:20250517'
+
+    // Libraries for Free-TTS
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
