--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
-    id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 repositories {
@@ -37,24 +37,14 @@ dependencies {
 // Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(24)
     }
 }
 
-// jar {
-//     manifest {
-//         attributes(
-//             'Main-Class': 'nanami.Main'
-//         )
-//     }
-
-//     duplicatesStrategy = DuplicatesStrategy.INCLUDE
-// }
-
 shadowJar {
-    archiveBaseName.set('app')
+    archiveBaseName.set('nanami')
     archiveClassifier.set('') // No `-all` suffix
-    archiveVersion.set('')
+    
     manifest {
         attributes(
             'Main-Class': 'nanami.Main'
