--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,8 @@
 [versions]
 agp = "8.8.0"
+appcompatVersion = "1.3.1"
 jlayer = "1.0.1"
+jna = "5.13.0"
 json = "20250517"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -11,9 +13,13 @@ activity = "1.8.0"
 constraintlayout = "2.1.4"
 vosk = "0.3.45"
 volley = "1.2.1"
+voskAndroid = "0.3.47"
+media3Common = "1.7.1"
 
 [libraries]
+appcompat-v131 = { module = "androidx.appcompat:appcompat", version.ref = "appcompatVersion" }
 jlayer = { module = "javazoom:jlayer", version.ref = "jlayer" }
+jna = { module = "net.java.dev.jna:jna", version.ref = "jna" }
 json = { module = "org.json:json", version.ref = "json" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -24,6 +30,8 @@ activity = { group = "androidx.activity", name = "activity", version.ref = "acti
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 vosk = { module = "com.alphacephei:vosk", version.ref = "vosk" }
 volley = { group = "com.android.volley", name = "volley", version.ref = "volley" }
+vosk-android = { module = "com.alphacephei:vosk-android", version.ref = "voskAndroid" }
+media3-common = { group = "androidx.media3", name = "media3-common", version.ref = "media3Common" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
